--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:Jc5rya/odXv5tTlFrhRumD+LZDVsyctYejXeJbZd1UM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://protected-sea-63049.herokuapp.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
