--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=ConE
+APP_ENV=production
 APP_KEY=base64:Jc5rya/odXv5tTlFrhRumD+LZDVsyctYejXeJbZd1UM=
 APP_DEBUG=true
-APP_URL=https://protected-sea-63049.herokuapp.com
+APP_URL=https://protected-sea-63049.herokuapp.com/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
